# RimeStandalone

./: .gitignore  CMakeLists.txt  CaptureLogs.ps1  Configurator.ps1  Install.bat  Install.ps1  README.md  RegisterRimeApo.ps1  RimeCert.pfx  Uninstall.bat
src/: main.cpp
src/apo/: DllMain.cpp  RimeApo.cpp  RimeApo.def  RimeApo.h
src/audio/: AudioEngine.cpp  AudioEngine.h  IpcAudioClient.cpp  IpcAudioClient.h  IpcSharedMemory.h  OscProxy.cpp  OscProxy.h  RingBuffer.cpp  RingBuffer.h  SolarXrClient.cpp  SolarXrClient.h  WASAPICapture.cpp  WASAPICapture.h  WASAPIKeepAlive.cpp  WASAPIKeepAlive.h  WASAPIOutput.cpp  WASAPIOutput.h
src/config/: Config.cpp  Config.h
src/setup/: Setup.cpp  setup.rc
src/vst/: PluginLoader.cpp  PluginLoader.h  VSTHost.cpp  VSTHost.h  VSTStream.h
